# cmi-docx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cmi_docx.html  index.html  justfile  pyproject.toml  remove_me_minimal_example.py  search.js
.github/workflows/: docs.yaml  pypi.yaml  test.yaml
cmi_docx/: algorithms.html  comment.html  document.html  paragraph.html  run.html  styles.html  table.html  utils.html
src/cmi_docx/: __init__.py  algorithms.py  comment.py  document.py  paragraph.py  run.py  styles.py  table.py
src/cmi_docx/declarative/: __init__.py  base.py  document.py  image.py  pack.py  paragraph.py  section.py  styles.py  table.py
tests/: test_comment.py  test_document.py  test_fibonacci.py  test_paragraph.py  test_run.py  test_utils.py
tests/declarative/: test_async.py  test_basic.py  test_condition.py  test_declarative_basic.py  test_declarative_styles.py  test_declarative_table.py  test_section_margins.py  test_section_properties.py  test_table.py  test_template_replacement.py
